@@ -1,5 +1,6 @@
 package de.tum.in.www1.artemis.exam;
 
+import static java.time.ZonedDateTime.now;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.net.URI;
@@ -58,6 +59,7 @@ import de.tum.in.www1.artemis.repository.ExamSessionRepository;
 import de.tum.in.www1.artemis.repository.ExamUserRepository;
 import de.tum.in.www1.artemis.repository.ExerciseGroupRepository;
 import de.tum.in.www1.artemis.repository.ExerciseRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseBuildConfigRepository;
 import de.tum.in.www1.artemis.repository.StudentExamRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
 import de.tum.in.www1.artemis.repository.SubmissionRepository;
@@ -72,9 +74,9 @@ import de.tum.in.www1.artemis.user.UserUtilService;
 @Service
 public class ExamUtilService {
 
-    private static final ZonedDateTime pastTimestamp = ZonedDateTime.now().minusDays(1);
+    private static final ZonedDateTime PAST_TIMESTAMP = ZonedDateTime.now().minusDays(1);
 
-    private static final ZonedDateTime futureFutureTimestamp = ZonedDateTime.now().plusDays(2);
+    private static final ZonedDateTime FUTURE_FUTURE_TIMESTAMP = ZonedDateTime.now().plusDays(2);
 
     @Autowired
     private CourseRepository courseRepo;
@@ -93,6 +95,9 @@ public class ExamUtilService {
 
     @Autowired
     private ExerciseRepository exerciseRepo;
+
+    @Autowired
+    private ProgrammingExerciseBuildConfigRepository programmingExerciseBuildConfigRepository;
 
     @Autowired
     private ExamUserRepository examUserRepository;
@@ -243,9 +248,9 @@ public class ExamUtilService {
         exam = examRepository.save(exam);
 
         // add exercises
-        var exercise1a = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
-        var exercise1b = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
-        var exercise1c = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
+        var exercise1a = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
+        var exercise1b = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
+        var exercise1c = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
         exerciseRepo.saveAll(List.of(exercise1a, exercise1b, exercise1c));
 
         return examRepository.findWithExerciseGroupsAndExercisesByIdOrElseThrow(exam.getId());
@@ -281,9 +286,9 @@ public class ExamUtilService {
         // TODO: also add other exercise types
 
         // add exercises
-        var exercise1a = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
-        var exercise1b = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
-        var exercise1c = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(0));
+        var exercise1a = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
+        var exercise1b = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
+        var exercise1c = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().getFirst());
         exerciseRepo.saveAll(List.of(exercise1a, exercise1b, exercise1c));
 
         var exercise2a = TextExerciseFactory.generateTextExerciseForExam(exam.getExerciseGroups().get(1));
@@ -582,7 +587,7 @@ public class ExamUtilService {
         exam.setExamMaxPoints(5 * 5);
         exam = examRepository.save(exam);
 
-        ExerciseGroup modellingGroup = exam.getExerciseGroups().get(0);
+        ExerciseGroup modellingGroup = exam.getExerciseGroups().getFirst();
         Exercise modelling = ModelingExerciseFactory.generateModelingExerciseForExam(DiagramType.ClassDiagram, modellingGroup);
         modellingGroup.addExercise(modelling);
         exerciseRepo.save(modelling);
@@ -629,6 +634,10 @@ public class ExamUtilService {
         return addStudentExamWithUser(exam, userRepo.findOneByLogin(userLogin).orElseThrow());
     }
 
+    public StudentExam addStudentExamWithUserAndWorkingTime(Exam exam, String userLogin, int workingTime) {
+        return addStudentExamWithUserAndWorkingTime(exam, userRepo.findOneByLogin(userLogin).orElseThrow(), workingTime);
+    }
+
     /**
      * Creates and saves a StudentExam for the given Exam and User.
      *
@@ -637,9 +646,21 @@ public class ExamUtilService {
      * @return The newly created StudentExam
      */
     public StudentExam addStudentExamWithUser(Exam exam, User user) {
+        return addStudentExamWithUserAndWorkingTime(exam, user, exam.getDuration());
+    }
+
+    /**
+     * Creates and saves a StudentExam for the given Exam and User with the given working time.
+     *
+     * @param exam        The Exam for which the StudentExam should be created
+     * @param user        The User for which the StudentExam should be created
+     * @param workingTime The working time for the StudentExam
+     * @return The newly created StudentExam
+     */
+    public StudentExam addStudentExamWithUserAndWorkingTime(Exam exam, User user, int workingTime) {
         StudentExam studentExam = ExamFactory.generateStudentExam(exam);
         studentExam.setUser(user);
-        studentExam.setWorkingTime(exam.getDuration());
+        studentExam.setWorkingTime(workingTime);
         studentExam = studentExamRepository.save(studentExam);
         return studentExam;
     }
@@ -757,7 +778,7 @@ public class ExamUtilService {
         exam.setExamMaxPoints(24);
         exam = examRepository.save(exam);
         // NOTE: we have to reassign, otherwise we get problems, because the objects have changed
-        var exerciseGroup0 = exam.getExerciseGroups().get(0);
+        var exerciseGroup0 = exam.getExerciseGroups().getFirst();
         var exerciseGroup1 = exam.getExerciseGroups().get(1);
         var exerciseGroup2 = exam.getExerciseGroups().get(2);
         var exerciseGroup3 = exam.getExerciseGroups().get(3);
@@ -812,6 +833,7 @@ public class ExamUtilService {
             var exerciseGroup6 = exam.getExerciseGroups().get(6);
             // Programming exercises need a proper setup for 'prepare exam start' to work
             ProgrammingExercise programmingExercise1 = ProgrammingExerciseFactory.generateProgrammingExerciseForExam(exerciseGroup6, "Programming");
+            programmingExerciseBuildConfigRepository.save(programmingExercise1.getBuildConfig());
             exerciseRepo.save(programmingExercise1);
             programmingExerciseUtilService.addTemplateParticipationForProgrammingExercise(programmingExercise1);
             programmingExerciseUtilService.addSolutionParticipationForProgrammingExercise(programmingExercise1);
@@ -837,7 +859,7 @@ public class ExamUtilService {
         initialExam.setNumberOfExercisesInExam(2);
         var exam = examRepository.save(initialExam);
         // NOTE: we have to reassign, otherwise we get problems, because the objects have changed
-        var exerciseGroup0 = exam.getExerciseGroups().get(0);
+        var exerciseGroup0 = exam.getExerciseGroups().getFirst();
         var exerciseGroup1 = exam.getExerciseGroups().get(1);
 
         TextExercise textExercise1 = TextExerciseFactory.generateTextExerciseForExam(exerciseGroup0);
@@ -859,6 +881,7 @@ public class ExamUtilService {
             var exerciseGroup2 = exam.getExerciseGroups().get(2);
             // Programming exercises need a proper setup for 'prepare exam start' to work
             ProgrammingExercise programmingExercise1 = ProgrammingExerciseFactory.generateProgrammingExerciseForExam(exerciseGroup2);
+            programmingExerciseBuildConfigRepository.save(programmingExercise1.getBuildConfig());
             exerciseRepo.save(programmingExercise1);
             programmingExerciseUtilService.addTemplateParticipationForProgrammingExercise(programmingExercise1);
             programmingExerciseUtilService.addSolutionParticipationForProgrammingExercise(programmingExercise1);
@@ -885,8 +908,49 @@ public class ExamUtilService {
      * @return The newly created ExerciseGroup
      */
     public ExerciseGroup addExerciseGroupWithExamAndCourse(boolean mandatory) {
-        Course course = CourseFactory.generateCourse(null, pastTimestamp, futureFutureTimestamp, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
+        Course course = CourseFactory.generateCourse(null, PAST_TIMESTAMP, FUTURE_FUTURE_TIMESTAMP, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
         Exam exam = ExamFactory.generateExam(course);
+        ExerciseGroup exerciseGroup = ExamFactory.generateExerciseGroup(mandatory, exam);
+
+        course = courseRepo.save(course);
+        exam = examRepository.save(exam);
+
+        Optional<Course> optionalCourse = courseRepo.findById(course.getId());
+        assertThat(optionalCourse).as("course can be retrieved").isPresent();
+        Course courseDB = optionalCourse.orElseThrow();
+
+        Optional<Exam> optionalExam = examRepository.findById(exam.getId());
+        assertThat(optionalCourse).as("exam can be retrieved").isPresent();
+        Exam examDB = optionalExam.orElseThrow();
+
+        Optional<ExerciseGroup> optionalExerciseGroup = exerciseGroupRepository.findById(exerciseGroup.getId());
+        assertThat(optionalExerciseGroup).as("exerciseGroup can be retrieved").isPresent();
+        ExerciseGroup exerciseGroupDB = optionalExerciseGroup.orElseThrow();
+
+        assertThat(examDB.getCourse().getId()).as("exam and course are linked correctly").isEqualTo(courseDB.getId());
+        assertThat(exerciseGroupDB.getExam().getId()).as("exerciseGroup and exam are linked correctly").isEqualTo(examDB.getId());
+
+        return exerciseGroup;
+    }
+
+    /**
+     * Creates and saves an Exam with an ExerciseGroup for a newly created, active course with default group names.
+     *
+     * @param mandatory                  True, if the ExerciseGroup should be mandatory
+     * @param startDateBeforeCurrentTime True, if the start date of the created Exam should be before the current time, needed for examLiveEvent tests for already started exams
+     * @return The newly created ExerciseGroup
+     */
+    public ExerciseGroup addExerciseGroupWithExamAndCourse(boolean mandatory, boolean startDateBeforeCurrentTime) {
+        Course course = CourseFactory.generateCourse(null, PAST_TIMESTAMP, FUTURE_FUTURE_TIMESTAMP, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
+        Exam exam;
+        if (startDateBeforeCurrentTime) {
+            // Create an exam that is already started
+            ZonedDateTime currentTime = now();
+            exam = ExamFactory.generateExam(course, currentTime.minusMinutes(10), currentTime.minusMinutes(5), currentTime.plusMinutes(60), false);
+        }
+        else {
+            exam = ExamFactory.generateExam(course);
+        }
         ExerciseGroup exerciseGroup = ExamFactory.generateExerciseGroup(mandatory, exam);
 
         course = courseRepo.save(course);
@@ -917,7 +981,7 @@ public class ExamUtilService {
      * @return The newly created ExerciseGroup
      */
     public ExerciseGroup addExerciseGroupWithExamWithReviewDatesAndCourse(boolean mandatory) {
-        Course course = CourseFactory.generateCourse(null, pastTimestamp, futureFutureTimestamp, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
+        Course course = CourseFactory.generateCourse(null, PAST_TIMESTAMP, FUTURE_FUTURE_TIMESTAMP, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
         Exam exam = ExamFactory.generateExamWithStudentReviewDates(course);
         ExerciseGroup exerciseGroup = ExamFactory.generateExerciseGroup(mandatory, exam);
 
@@ -949,7 +1013,7 @@ public class ExamUtilService {
      * @return The newly created ExerciseGroup
      */
     public ExerciseGroup createAndSaveActiveExerciseGroup(boolean mandatory) {
-        Course course = courseUtilService.createAndSaveCourse(1L, pastTimestamp, futureFutureTimestamp, Set.of());
+        Course course = courseUtilService.createAndSaveCourse(1L, PAST_TIMESTAMP, FUTURE_FUTURE_TIMESTAMP, Set.of());
         Exam exam = ExamFactory.generateExam(course);
         ExerciseGroup exerciseGroup = ExamFactory.generateExerciseGroup(mandatory, exam);
         examRepository.save(exam);
@@ -985,7 +1049,7 @@ public class ExamUtilService {
     public StudentExam addExercisesWithParticipationsAndSubmissionsToStudentExam(Exam exam, StudentExam studentExam, String validModel, URI localRepoPath) {
         var exerciseGroups = exam.getExerciseGroups();
         // text exercise
-        var exercise = exerciseGroups.get(0).getExercises().iterator().next();
+        var exercise = exerciseGroups.getFirst().getExercises().iterator().next();
         var user = studentExam.getUser();
         var participation = ParticipationFactory.generateStudentParticipation(InitializationState.INITIALIZED, exercise, user);
         Submission submission = ParticipationFactory.generateTextSubmission("Test Submission", Language.ENGLISH, true);
