@@ -42,7 +42,6 @@ import org.springframework.util.MultiValueMap;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
-import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.Team;
 import de.tum.in.www1.artemis.domain.TeamAssignmentConfig;
@@ -73,11 +72,9 @@ import de.tum.in.www1.artemis.domain.quiz.ShortAnswerQuestionStatistic;
 import de.tum.in.www1.artemis.domain.quiz.ShortAnswerSolution;
 import de.tum.in.www1.artemis.domain.quiz.ShortAnswerSpot;
 import de.tum.in.www1.artemis.exam.ExamUtilService;
-import de.tum.in.www1.artemis.exercise.ExerciseUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
 import de.tum.in.www1.artemis.repository.QuizExerciseRepository;
 import de.tum.in.www1.artemis.repository.QuizSubmissionRepository;
-import de.tum.in.www1.artemis.repository.ResultRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
 import de.tum.in.www1.artemis.repository.SubmittedAnswerRepository;
 import de.tum.in.www1.artemis.repository.TeamRepository;
@@ -85,7 +82,6 @@ import de.tum.in.www1.artemis.repository.metis.conversation.ChannelRepository;
 import de.tum.in.www1.artemis.security.SecurityUtils;
 import de.tum.in.www1.artemis.service.ExerciseService;
 import de.tum.in.www1.artemis.service.quiz.QuizExerciseService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.util.ExerciseIntegrationTestService;
 import de.tum.in.www1.artemis.util.PageableSearchUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.QuizBatchJoinDTO;
@@ -102,9 +98,6 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
     @Autowired
     private StudentParticipationRepository studentParticipationRepository;
-
-    @Autowired
-    private ResultRepository resultRepository;
 
     @Autowired
     private QuizExerciseRepository quizExerciseRepository;
@@ -131,19 +124,10 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
     private ChannelRepository channelRepository;
 
     @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
     private ExamUtilService examUtilService;
 
     @Autowired
-    private ExerciseUtilService exerciseUtilService;
-
-    @Autowired
     private QuizExerciseUtilService quizExerciseUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
 
     @Autowired
     private PageableSearchUtilService pageableSearchUtilService;
@@ -206,6 +190,16 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         quizExercise.setCourse(exerciseGroup.getExam().getCourse());
 
         createQuizExerciseWithFiles(quizExercise, HttpStatus.BAD_REQUEST, true);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testQuizExerciseForExamBadRequestOtherOperations() throws Exception {
+        QuizExercise quizExercise = createQuizOnServerForExam();
+
+        request.putWithResponseBody("/api/quiz-exercises/" + quizExercise.getId() + "/add-batch", null, QuizBatch.class, BAD_REQUEST);
+        request.postWithResponseBody("/api/quiz-exercises/" + quizExercise.getId() + "/join", new QuizBatchJoinDTO("1234"), QuizBatch.class, HttpStatus.BAD_REQUEST);
+        request.putWithResponseBody("/api/quiz-exercises/" + quizExercise.getId() + "/start-now", quizExercise, QuizExercise.class, HttpStatus.BAD_REQUEST);
     }
 
     private QuizExercise importQuizExerciseWithFiles(QuizExercise quizExercise, Long id, List<MockMultipartFile> files, HttpStatus expectedStatus) throws Exception {
@@ -385,7 +379,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         QuizExercise quizExercise = quizExerciseUtilService.createAndSaveQuiz(ZonedDateTime.now().plusHours(5), null, QuizMode.SYNCHRONIZED);
 
         // multiple correct answers are not allowed
-        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         mc.setSingleChoice(true);
         mc.getAnswerOptions().get(1).setIsCorrect(true);
 
@@ -398,7 +392,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
     void testUpdateQuizExercise_SingleChoiceMC_badRequest(ScoringType scoringType) throws Exception {
         QuizExercise quizExercise = quizExerciseUtilService.createAndSaveQuiz(ZonedDateTime.now().plusHours(5), null, QuizMode.SYNCHRONIZED);
 
-        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         mc.setSingleChoice(true);
         mc.setScoringType(scoringType);
 
@@ -527,7 +521,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
     void testUpdateRunningQuizExercise() throws Exception {
         QuizExercise quizExercise = quizExerciseUtilService.createAndSaveQuiz(ZonedDateTime.now().minusHours(1), null, QuizMode.SYNCHRONIZED);
 
-        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         mc.getAnswerOptions().remove(0);
         mc.getAnswerOptions().add(new AnswerOption().text("C").hint("H3").explanation("E3").isCorrect(true));
 
@@ -631,7 +625,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
         List<QuizExercise> quizExercises = request.getList("/api/exams/" + examId + "/quiz-exercises", OK, QuizExercise.class);
         assertThat(quizExercises).as("Quiz exercise was retrieved").hasSize(1);
-        assertThat(quizExercise.getId()).as("Quiz exercise with the right id was retrieved").isEqualTo(quizExercises.get(0).getId());
+        assertThat(quizExercise.getId()).as("Quiz exercise with the right id was retrieved").isEqualTo(quizExercises.getFirst().getId());
     }
 
     @Test
@@ -779,7 +773,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         log.debug("QuizPointStatistic after re-evaluate (without changes): {}", quizExerciseWithReevaluatedStatistics.getQuizPointStatistic());
 
         // remove wrong answer option and reevaluate
-        var multipleChoiceQuestion = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        var multipleChoiceQuestion = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         multipleChoiceQuestion.getAnswerOptions().remove(1);
 
         reevalQuizExerciseWithFiles(quizExercise, quizExercise.getId(), List.of(), OK);
@@ -787,7 +781,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         // load the exercise again after it was re-evaluated
         quizExerciseWithReevaluatedStatistics = request.get("/api/quiz-exercises/" + quizExercise.getId(), OK, QuizExercise.class);
 
-        var multipleChoiceQuestionAfterReevaluate = (MultipleChoiceQuestion) quizExerciseWithReevaluatedStatistics.getQuizQuestions().get(0);
+        var multipleChoiceQuestionAfterReevaluate = (MultipleChoiceQuestion) quizExerciseWithReevaluatedStatistics.getQuizQuestions().getFirst();
         assertThat(multipleChoiceQuestionAfterReevaluate.getAnswerOptions()).hasSize(1);
 
         assertThat(quizExerciseWithReevaluatedStatistics.getQuizPointStatistic()).isEqualTo(quizExercise.getQuizPointStatistic());
@@ -834,7 +828,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
     void testReevaluateStatistics_Practice() throws Exception {
         QuizExercise quizExercise = createQuizOnServer(ZonedDateTime.now().plusSeconds(5), null, QuizMode.SYNCHRONIZED);
         // use the exact other scoring types to cover all combinations in the tests
-        quizExercise.getQuizQuestions().get(0).setScoringType(ScoringType.PROPORTIONAL_WITH_PENALTY);   // MC
+        quizExercise.getQuizQuestions().getFirst().setScoringType(ScoringType.PROPORTIONAL_WITH_PENALTY);   // MC
         quizExercise.getQuizQuestions().get(1).setScoringType(ScoringType.ALL_OR_NOTHING);              // DnD
         quizExercise.getQuizQuestions().get(2).setScoringType(ScoringType.PROPORTIONAL_WITH_PENALTY);   // SA
 
@@ -884,7 +878,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         log.debug("QuizPointStatistic after re-evaluate (without changes): {}", quizExerciseWithReevaluatedStatistics.getQuizPointStatistic());
 
         // remove wrong answer option and reevaluate
-        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExerciseWithReevaluatedStatistics.getQuizQuestions().get(0);
+        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExerciseWithReevaluatedStatistics.getQuizQuestions().getFirst();
         mc.getAnswerOptions().remove(1);
 
         quizExerciseWithReevaluatedStatistics = reevalQuizExerciseWithFiles(quizExerciseWithReevaluatedStatistics, quizExercise.getId(), List.of(), OK);
@@ -940,7 +934,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
             newMapping.setInvalid(false);
             newMapping.setShortAnswerSolutionIndex(2);
             newMapping.setSolution(newSolution);
-            newMapping.setSpot(shortAnswerQuestion.getSpots().get(0));
+            newMapping.setSpot(shortAnswerQuestion.getSpots().getFirst());
             newMapping.setShortAnswerSpotIndex(0);
             shortAnswerQuestion.getCorrectMappings().add(newMapping);
             quizExercise.getQuizQuestions().remove(2);
@@ -953,6 +947,36 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         ShortAnswerQuestion receivedShortAnswerQuestion = (ShortAnswerQuestion) updatedQuizExercise.getQuizQuestions().get(2);
         assertThat(receivedShortAnswerQuestion.getSolutions()).hasSize(3);
         assertThat(receivedShortAnswerQuestion.getCorrectMappings()).hasSize(3);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testEvaluateQuizKeepsResult() throws Exception {
+        var quizExercise = quizExerciseUtilService.createAndSaveQuiz(ZonedDateTime.now().minusHours(5), ZonedDateTime.now().minusHours(2), QuizMode.SYNCHRONIZED);
+        var quizSubmission = QuizExerciseFactory.generateSubmissionForThreeQuestions(quizExercise, 1, true, ZonedDateTime.now().minusHours(3));
+        var submission = participationUtilService.addSubmission(quizExercise, quizSubmission, TEST_PREFIX + "student1");
+        submission = participationUtilService.addResultToSubmission(quizSubmission, AssessmentType.AUTOMATIC, null, quizExercise.getScoreForSubmission(quizSubmission), true);
+        assertThat(submission.getResults()).hasSize(1);
+
+        request.postWithoutResponseBody("/api/quiz-exercises/" + quizExercise.getId() + "/evaluate", null, OK);
+
+        var newResult = resultRepository.findDistinctBySubmissionId(submission.getId());
+        assertThat(newResult).isPresent();
+        assertThat(newResult.get()).isEqualTo(submission.getResults().getFirst());
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testEvaluateQuizCreatesResult() throws Exception {
+        var quizExercise = quizExerciseUtilService.createAndSaveQuiz(ZonedDateTime.now().minusHours(5), ZonedDateTime.now().minusHours(2), QuizMode.SYNCHRONIZED);
+        var quizSubmission = QuizExerciseFactory.generateSubmissionForThreeQuestions(quizExercise, 1, true, ZonedDateTime.now().minusHours(3));
+        var submission = participationUtilService.addSubmission(quizExercise, quizSubmission, TEST_PREFIX + "student1");
+        assertThat(submission.getResults()).isEmpty();
+
+        request.postWithoutResponseBody("/api/quiz-exercises/" + quizExercise.getId() + "/evaluate", null, OK);
+
+        var newResult = resultRepository.findDistinctBySubmissionId(submission.getId());
+        assertThat(newResult).isPresent();
     }
 
     @Test
@@ -1485,7 +1509,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         int validityThreshold = 500;
         QuizExercise quizExercise = createMultipleChoiceQuizExercise();
 
-        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         question.setExplanation("0".repeat(validityThreshold));
 
         createQuizExerciseWithFiles(quizExercise, HttpStatus.CREATED, true);
@@ -1500,7 +1524,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         int validityThreshold = 500;
         QuizExercise quizExercise = createMultipleChoiceQuizExercise();
 
-        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         question.setExplanation("0".repeat(validityThreshold + 1));
 
         createQuizExerciseWithFiles(quizExercise, HttpStatus.INTERNAL_SERVER_ERROR, true);
@@ -1515,8 +1539,8 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         int validityThreshold = 500;
         QuizExercise quizExercise = createMultipleChoiceQuizExercise();
 
-        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
-        question.getAnswerOptions().get(0).setExplanation("0".repeat(validityThreshold));
+        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
+        question.getAnswerOptions().getFirst().setExplanation("0".repeat(validityThreshold));
 
         createQuizExerciseWithFiles(quizExercise, HttpStatus.CREATED, true);
     }
@@ -1530,8 +1554,8 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
         int validityThreshold = 500;
         QuizExercise quizExercise = createMultipleChoiceQuizExercise();
 
-        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
-        question.getAnswerOptions().get(0).setExplanation("0".repeat(validityThreshold + 1));
+        MultipleChoiceQuestion question = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
+        question.getAnswerOptions().getFirst().setExplanation("0".repeat(validityThreshold + 1));
 
         createQuizExerciseWithFiles(quizExercise, HttpStatus.INTERNAL_SERVER_ERROR, true);
     }
@@ -1601,7 +1625,7 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
         List<DragAndDropQuestion> dragAndDropQuestions = quizExercise.getQuizQuestions().stream().filter(q -> q instanceof DragAndDropQuestion).map(q -> (DragAndDropQuestion) q)
                 .toList();
-        DragAndDropQuestion question = dragAndDropQuestions.get(0);
+        DragAndDropQuestion question = dragAndDropQuestions.getFirst();
         question.setBackgroundFilePath(newBackgroundFilePath);
         DragItem item = question.getDragItems().get(1);
         item.setPictureFilePath(newPictureFilePath);
@@ -1705,10 +1729,10 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(multipleChoiceQuestion.getPoints()).as("Multiple choice question score is correct").isEqualTo(4);
 
                 List<AnswerOption> answerOptions = multipleChoiceQuestion.getAnswerOptions();
-                assertThat(answerOptions.get(0).getText()).as("Text for answer option is correct").isEqualTo("A");
-                assertThat(answerOptions.get(0).getHint()).as("Hint for answer option is correct").isEqualTo("H1");
-                assertThat(answerOptions.get(0).getExplanation()).as("Explanation for answer option is correct").isEqualTo("E1");
-                assertThat(answerOptions.get(0).isIsCorrect()).as("Is correct for answer option is correct").isTrue();
+                assertThat(answerOptions.getFirst().getText()).as("Text for answer option is correct").isEqualTo("A");
+                assertThat(answerOptions.getFirst().getHint()).as("Hint for answer option is correct").isEqualTo("H1");
+                assertThat(answerOptions.getFirst().getExplanation()).as("Explanation for answer option is correct").isEqualTo("E1");
+                assertThat(answerOptions.getFirst().isIsCorrect()).as("Is correct for answer option is correct").isTrue();
                 assertThat(answerOptions.get(1).getText()).as("Text for answer option is correct").isEqualTo("B");
                 assertThat(answerOptions.get(1).getHint()).as("Hint for answer option is correct").isEqualTo("H2");
                 assertThat(answerOptions.get(1).getExplanation()).as("Explanation for answer option is correct").isEqualTo("E2");
@@ -1722,11 +1746,11 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(dragAndDropQuestion.getPoints()).as("Drag and drop question score is correct").isEqualTo(3);
 
                 List<DropLocation> dropLocations = dragAndDropQuestion.getDropLocations();
-                assertThat(dropLocations.get(0).getPosX()).as("Pos X for drop location is correct").isEqualTo(10);
-                assertThat(dropLocations.get(0).getPosY()).as("Pos Y for drop location is correct").isEqualTo(10);
-                assertThat(dropLocations.get(0).getWidth()).as("Width for drop location is correct").isEqualTo(10);
-                assertThat(dropLocations.get(0).getHeight()).as("Height for drop location is correct").isEqualTo(10);
-                assertThat(dropLocations.get(0).getQuestion()).isNotNull();
+                assertThat(dropLocations.getFirst().getPosX()).as("Pos X for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getPosY()).as("Pos Y for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getWidth()).as("Width for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getHeight()).as("Height for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getQuestion()).isNotNull();
                 assertThat(dropLocations.get(1).getPosX()).as("Pos X for drop location is correct").isEqualTo(20);
                 assertThat(dropLocations.get(1).getPosY()).as("Pos Y for drop location is correct").isEqualTo(20);
                 assertThat(dropLocations.get(1).getWidth()).as("Width for drop location is correct").isEqualTo(10);
@@ -1744,8 +1768,8 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(dropLocations.get(3).getQuestion()).isNotNull();
 
                 List<DragItem> dragItems = dragAndDropQuestion.getDragItems();
-                assertThat(dragItems.get(0).getText()).as("Text for drag item is correct").isEqualTo("D1");
-                assertThat(dragItems.get(0).getPictureFilePath()).as("Picture file path for drag item is correct").isNull();
+                assertThat(dragItems.getFirst().getText()).as("Text for drag item is correct").isEqualTo("D1");
+                assertThat(dragItems.getFirst().getPictureFilePath()).as("Picture file path for drag item is correct").isNull();
                 assertThat(dragItems.get(1).getText()).as("Text for drag item is correct").isNull();
                 assertThat(dragItems.get(1).getPictureFilePath()).as("Picture file path for drag item is correct").isNotEmpty();
                 assertThat(dragItems.get(2).getText()).as("Text for drag item is correct").isEqualTo("D3");
@@ -1769,13 +1793,13 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(shortAnswerQuestion.getPoints()).as("Short answer question score is correct").isEqualTo(2);
 
                 List<ShortAnswerSpot> spots = shortAnswerQuestion.getSpots();
-                assertThat(spots.get(0).getSpotNr()).as("Spot nr for spot is correct").isZero();
-                assertThat(spots.get(0).getWidth()).as("Width for spot is correct").isEqualTo(1);
+                assertThat(spots.getFirst().getSpotNr()).as("Spot nr for spot is correct").isZero();
+                assertThat(spots.getFirst().getWidth()).as("Width for spot is correct").isEqualTo(1);
                 assertThat(spots.get(1).getSpotNr()).as("Spot nr for spot is correct").isEqualTo(2);
                 assertThat(spots.get(1).getWidth()).as("Width for spot is correct").isEqualTo(2);
 
                 List<ShortAnswerSolution> solutions = shortAnswerQuestion.getSolutions();
-                assertThat(solutions.get(0).getText()).as("Text for solution is correct").isEqualTo("is");
+                assertThat(solutions.getFirst().getText()).as("Text for solution is correct").isEqualTo("is");
                 assertThat(solutions.get(1).getText()).as("Text for solution is correct").isEqualTo("long");
             }
         }
@@ -1795,10 +1819,10 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(multipleChoiceQuestion.getPoints()).as("Multiple choice question score is correct").isEqualTo(4);
 
                 List<AnswerOption> answerOptions = multipleChoiceQuestion.getAnswerOptions();
-                assertThat(answerOptions.get(0).getText()).as("Text for answer option is correct").isEqualTo("B");
-                assertThat(answerOptions.get(0).getHint()).as("Hint for answer option is correct").isEqualTo("H2");
-                assertThat(answerOptions.get(0).getExplanation()).as("Explanation for answer option is correct").isEqualTo("E2");
-                assertThat(answerOptions.get(0).isIsCorrect()).as("Is correct for answer option is correct").isFalse();
+                assertThat(answerOptions.getFirst().getText()).as("Text for answer option is correct").isEqualTo("B");
+                assertThat(answerOptions.getFirst().getHint()).as("Hint for answer option is correct").isEqualTo("H2");
+                assertThat(answerOptions.getFirst().getExplanation()).as("Explanation for answer option is correct").isEqualTo("E2");
+                assertThat(answerOptions.getFirst().isIsCorrect()).as("Is correct for answer option is correct").isFalse();
                 assertThat(answerOptions.get(1).getText()).as("Text for answer option is correct").isEqualTo("C");
                 assertThat(answerOptions.get(1).getHint()).as("Hint for answer option is correct").isEqualTo("H3");
                 assertThat(answerOptions.get(1).getExplanation()).as("Explanation for answer option is correct").isEqualTo("E3");
@@ -1816,10 +1840,10 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(dragAndDropQuestion.getPoints()).as("Drag and drop question score is correct").isEqualTo(3);
 
                 List<DropLocation> dropLocations = dragAndDropQuestion.getDropLocations();
-                assertThat(dropLocations.get(0).getPosX()).as("Pos X for drop location is correct").isEqualTo(20);
-                assertThat(dropLocations.get(0).getPosY()).as("Pos Y for drop location is correct").isEqualTo(20);
-                assertThat(dropLocations.get(0).getWidth()).as("Width for drop location is correct").isEqualTo(10);
-                assertThat(dropLocations.get(0).getHeight()).as("Height for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getPosX()).as("Pos X for drop location is correct").isEqualTo(20);
+                assertThat(dropLocations.getFirst().getPosY()).as("Pos Y for drop location is correct").isEqualTo(20);
+                assertThat(dropLocations.getFirst().getWidth()).as("Width for drop location is correct").isEqualTo(10);
+                assertThat(dropLocations.getFirst().getHeight()).as("Height for drop location is correct").isEqualTo(10);
                 assertThat(dropLocations.get(1).getPosX()).as("Pos X for drop location is correct").isEqualTo(30);
                 assertThat(dropLocations.get(1).getPosY()).as("Pos Y for drop location is correct").isEqualTo(30);
                 assertThat(dropLocations.get(1).getWidth()).as("Width for drop location is correct").isEqualTo(10);
@@ -1830,8 +1854,8 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(dropLocations.get(2).getHeight()).as("Height for drop location is correct").isEqualTo(10);
 
                 List<DragItem> dragItems = dragAndDropQuestion.getDragItems();
-                assertThat(dragItems.get(0).getText()).as("Text for drag item is correct").isNull();
-                assertThat(dragItems.get(0).getPictureFilePath()).as("Picture file path for drag item is correct").isNotEmpty();
+                assertThat(dragItems.getFirst().getText()).as("Text for drag item is correct").isNull();
+                assertThat(dragItems.getFirst().getPictureFilePath()).as("Picture file path for drag item is correct").isNotEmpty();
                 assertThat(dragItems.get(1).getText()).as("Text for drag item is correct").isEqualTo("D3");
                 assertThat(dragItems.get(1).getPictureFilePath()).as("Picture file path for drag item is correct").isNull();
                 assertThat(dragItems.get(2).getText()).as("Text for drag item is correct").isNull();
@@ -1845,17 +1869,17 @@ class QuizExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTe
                 assertThat(shortAnswerQuestion.getPoints()).as("Short answer question score is correct").isEqualTo(2);
 
                 List<ShortAnswerSpot> spots = shortAnswerQuestion.getSpots();
-                assertThat(spots.get(0).getSpotNr()).as("Spot nr for spot is correct").isEqualTo(2);
-                assertThat(spots.get(0).getWidth()).as("Width for spot is correct").isEqualTo(2);
+                assertThat(spots.getFirst().getSpotNr()).as("Spot nr for spot is correct").isEqualTo(2);
+                assertThat(spots.getFirst().getWidth()).as("Width for spot is correct").isEqualTo(2);
 
                 List<ShortAnswerSolution> solutions = shortAnswerQuestion.getSolutions();
-                assertThat(solutions.get(0).getText()).as("Text for solution is correct").isEqualTo("long");
+                assertThat(solutions.getFirst().getText()).as("Text for solution is correct").isEqualTo("long");
             }
         }
     }
 
     private void updateMultipleChoice(QuizExercise quizExercise) {
-        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().get(0);
+        MultipleChoiceQuestion mc = (MultipleChoiceQuestion) quizExercise.getQuizQuestions().getFirst();
         mc.getAnswerOptions().remove(0);
         mc.getAnswerOptions().add(new AnswerOption().text("C").hint("H3").explanation("E3").isCorrect(true));
         mc.getAnswerOptions().add(new AnswerOption().text("D").hint("H4").explanation("E4").isCorrect(true));
