@@ -60,11 +60,11 @@ import de.tum.in.www1.artemis.user.UserUtilService;
 @Service
 public class QuizExerciseUtilService {
 
-    private static final ZonedDateTime pastTimestamp = ZonedDateTime.now().minusDays(1);
+    private static final ZonedDateTime PAST_TIMESTAMP = ZonedDateTime.now().minusDays(1);
 
-    private static final ZonedDateTime futureTimestamp = ZonedDateTime.now().plusDays(1);
+    private static final ZonedDateTime FUTURE_TIMESTAMP = ZonedDateTime.now().plusDays(1);
 
-    private static final ZonedDateTime futureFutureTimestamp = ZonedDateTime.now().plusDays(2);
+    private static final ZonedDateTime FUTURE_FUTURE_TIMESTAMP = ZonedDateTime.now().plusDays(2);
 
     @Autowired
     private CourseRepository courseRepo;
@@ -129,8 +129,8 @@ public class QuizExerciseUtilService {
      * @return The newly created course with the quiz.
      */
     public Course addCourseWithOneQuizExercise(String title) {
-        Course course = CourseFactory.generateCourse(null, pastTimestamp, futureTimestamp, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
-        QuizExercise quizExercise = QuizExerciseFactory.createQuiz(course, futureTimestamp, futureFutureTimestamp, QuizMode.SYNCHRONIZED);
+        Course course = CourseFactory.generateCourse(null, PAST_TIMESTAMP, FUTURE_TIMESTAMP, new HashSet<>(), "tumuser", "tutor", "editor", "instructor");
+        QuizExercise quizExercise = QuizExerciseFactory.createQuiz(course, FUTURE_TIMESTAMP, FUTURE_FUTURE_TIMESTAMP, QuizMode.SYNCHRONIZED);
         quizExercise.setTitle(title);
         quizExercise.setDuration(120);
         assertThat(quizExercise.getQuizQuestions()).isNotEmpty();
@@ -300,10 +300,10 @@ public class QuizExerciseUtilService {
     public QuizSubmission addQuizExerciseToCourseWithParticipationAndSubmissionForUser(Course course, String login, boolean dueDateInTheFuture) throws IOException {
         QuizExercise quizExercise;
         if (dueDateInTheFuture) {
-            quizExercise = createAndSaveQuizWithAllQuestionTypes(course, pastTimestamp, futureTimestamp, futureTimestamp, QuizMode.SYNCHRONIZED);
+            quizExercise = createAndSaveQuizWithAllQuestionTypes(course, PAST_TIMESTAMP, FUTURE_TIMESTAMP, FUTURE_TIMESTAMP, QuizMode.SYNCHRONIZED);
         }
         else {
-            quizExercise = createAndSaveQuizWithAllQuestionTypes(course, pastTimestamp, pastTimestamp, pastTimestamp, QuizMode.SYNCHRONIZED);
+            quizExercise = createAndSaveQuizWithAllQuestionTypes(course, PAST_TIMESTAMP, PAST_TIMESTAMP, PAST_TIMESTAMP, QuizMode.SYNCHRONIZED);
         }
         quizExercise.setTitle("quiz");
         quizExercise.setDuration(120);
@@ -317,12 +317,12 @@ public class QuizExerciseUtilService {
         quizSubmission.setType(SubmissionType.MANUAL);
         quizSubmission.setScoreInPoints(2.0);
         var submittedAnswerMC = new MultipleChoiceSubmittedAnswer();
-        MultipleChoiceQuestion multipleChoiceQuestion = (MultipleChoiceQuestion) (quizExercise.getQuizQuestions().get(0));
-        submittedAnswerMC.setSelectedOptions(Set.of(multipleChoiceQuestion.getAnswerOptions().get(0), multipleChoiceQuestion.getAnswerOptions().get(1)));
+        MultipleChoiceQuestion multipleChoiceQuestion = (MultipleChoiceQuestion) (quizExercise.getQuizQuestions().getFirst());
+        submittedAnswerMC.setSelectedOptions(Set.of(multipleChoiceQuestion.getAnswerOptions().getFirst(), multipleChoiceQuestion.getAnswerOptions().get(1)));
         submittedAnswerMC.setQuizQuestion(multipleChoiceQuestion);
         var submittedAnswerSC = new MultipleChoiceSubmittedAnswer();
         MultipleChoiceQuestion singleChoiceQuestion = (MultipleChoiceQuestion) (quizExercise.getQuizQuestions().get(3));
-        submittedAnswerSC.setSelectedOptions(Set.of(multipleChoiceQuestion.getAnswerOptions().get(0)));
+        submittedAnswerSC.setSelectedOptions(Set.of(multipleChoiceQuestion.getAnswerOptions().getFirst()));
         submittedAnswerSC.setQuizQuestion(singleChoiceQuestion);
         var submittedShortAnswer = new ShortAnswerSubmittedAnswer();
         ShortAnswerQuestion shortAnswerQuestion = (ShortAnswerQuestion) (quizExercise.getQuizQuestions().get(2));
@@ -339,7 +339,7 @@ public class QuizExerciseUtilService {
         submittedShortAnswer.addSubmittedTexts(shortAnswerSubmittedText1);
         submittedShortAnswer.addSubmittedTexts(shortAnswerSubmittedText2);
         shortAnswerSubmittedText1.setSpot(shortAnswerQuestion.getSpots().get(1));
-        shortAnswerSubmittedText2.setSpot(shortAnswerQuestion.getSpots().get(0));
+        shortAnswerSubmittedText2.setSpot(shortAnswerQuestion.getSpots().getFirst());
 
         var submittedDragAndDropAnswer = new DragAndDropSubmittedAnswer();
         DragAndDropQuestion dragAndDropQuestion = (DragAndDropQuestion) (quizExercise.getQuizQuestions().get(1));
@@ -357,8 +357,8 @@ public class QuizExerciseUtilService {
         submittedDragAndDropAnswer.setQuizQuestion(dragAndDropQuestion);
         dragAndDropQuestion.setExercise(quizExercise);
         DragAndDropMapping dragAndDropMapping = new DragAndDropMapping();
-        dragAndDropMapping.setDragItem(dragAndDropQuestion.getDragItems().get(0));
-        dragAndDropMapping.setDropLocation(dragAndDropQuestion.getDropLocations().get(0));
+        dragAndDropMapping.setDragItem(dragAndDropQuestion.getDragItems().getFirst());
+        dragAndDropMapping.setDropLocation(dragAndDropQuestion.getDropLocations().getFirst());
         DragAndDropMapping incorrectDragAndDropMapping = new DragAndDropMapping();
         incorrectDragAndDropMapping.setDragItem(dragAndDropQuestion.getDragItems().get(3));
         incorrectDragAndDropMapping.setDropLocation(dragAndDropQuestion.getDropLocations().get(1));
